# snippets

./: .gitignore  CMakeLists.txt  README.md
Boost_tests/: CMakeLists.txt
Boost_tests/boost/: CMakeLists.txt  json_test.cpp
Boost_tests/cipher/: CMakeLists.txt  aes_test.cpp
boost/: CMakeLists.txt  json.cpp  json.h
cipher/: CMakeLists.txt  aes.cpp  aes.h
jni/: CMakeLists.txt  HelloWorld.cpp  README.md  com_snippets_jni_HelloWorld.h
jni/com/snippets/jni/: HelloWorld.java
